--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,5 +1,8 @@
 add_executable(dht dht_put.cpp)
 target_link_libraries(dht PRIVATE torrent-rasterbar)
 
+add_executable(dht_sample dht_sample.cpp)
+target_link_libraries(dht_sample PRIVATE torrent-rasterbar)
+
 add_executable(session_log_alerts session_log_alerts.cpp)
 target_link_libraries(session_log_alerts PRIVATE torrent-rasterbar)
