lower TCP keepalive timeout for SOCKS5 UDP tunnel, to detect network failures and retry

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -214,6 +214,7 @@ set(libtorrent_aux_include_files
 	allocating_handler
 	array
 	bind_to_device
+	keepalive
 	block_cache_reference
 	byteswap
 	cppint_import_export
