--- a/include/libtorrent/Makefile.am
+++ b/include/libtorrent/Makefile.am
@@ -164,6 +164,7 @@ nobase_include_HEADERS = \
   aux_/aligned_storage.hpp          \
   aux_/aligned_union.hpp            \
   aux_/bind_to_device.hpp           \
+  aux_/keepalive.hpp                \
   aux_/block_cache_reference.hpp    \
   aux_/container_wrapper.hpp        \
   aux_/cpuid.hpp                    \
