add build option to disable bittyrant choking algorithm

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -601,6 +601,8 @@ target_optional_compile_definitions(torrent-rasterbar PUBLIC FEATURE NAME mutabl
 	DESCRIPTION "Enables mutable torrent support" DISABLED TORRENT_DISABLE_MUTABLE_TORRENTS)
 target_optional_compile_definitions(torrent-rasterbar PUBLIC FEATURE NAME streaming DEFAULT ON
 	DESCRIPTION "Enables support for piece deadline" DISABLED TORRENT_DISABLE_STREAMING)
+target_optional_compile_definitions(torrent-rasterbar PUBLIC FEATURE NAME bittyrant DEFAULT ON
+	DESCRIPTION "Enables support for the bittyrant choking algorithm" DISABLED TORRENT_DISABLE_BITTYRANT)
 
 find_public_dependency(Iconv)
 if(MSVC)
