reduce include directories
This removes -I src -I test -I tools from the autotools build and
-I ed25519/src from all build systems.

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -30,7 +30,6 @@ upnp_test_SOURCES = upnp_test.cpp
 
 LDADD = $(top_builddir)/src/libtorrent-rasterbar.la
 
-AM_CPPFLAGS = -ftemplate-depth-50 -I$(top_srcdir)/include @DEBUGFLAGS@ @OPENSSL_INCLUDES@
-
+AM_CPPFLAGS = -ftemplate-depth-50 @DEBUGFLAGS@
 AM_LDFLAGS = @BOOST_SYSTEM_LIB@ @OPENSSL_LDFLAGS@ @OPENSSL_LIBS@
-
+DEFAULT_INCLUDES = -I$(top_srcdir)/include @OPENSSL_INCLUDES@
