--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -20,6 +20,7 @@ test_programs = \
   test_resume                \
   test_read_resume           \
   test_stack_allocator       \
+  test_ssl                   \
   test_storage               \
   test_time_critical         \
   test_torrent               \
@@ -248,6 +249,7 @@ test_time_critical_SOURCES = test_time_critical.cpp
 test_resume_SOURCES = test_resume.cpp
 test_read_resume_SOURCES = test_read_resume.cpp
 test_stack_allocator_SOURCES = test_stack_allocator.cpp
+test_ssl_SOURCES = test_ssl.cpp
 test_torrent_SOURCES = test_torrent.cpp
 test_tracker_SOURCES = test_tracker.cpp
 test_transfer_SOURCES = test_transfer.cpp
